[project]
name = "enterprisealrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=2.2.5",
    "alphabet-detector>=0.0.7",
    "base58>=2.1.1",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "cachetools>=4.2.2",
    "configparser>=7.2.0",
    "currencyconverter>=0.18.12",
    "emoji==1.7.0",
    "feedparser>=6.0.12",
    "future>=1.0.0",
    "gitpython>=3.1.45",
    "gpytranslate>=2.0.0",
    "markdown2>=2.5.4",
    "multicolorcaptcha>=1.2.0",
    "pillow>=4.2.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pycryptodome==3.19.0",
    "pydantic>=2.12.5",
    "pyrate-limiter==2.10.0",
    "python-telegram-bot==13.15",
    "pytimeparse>=1.1.8",
    "pyyaml>=5.1.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sibylsystem>=0.0.25",
    "spamwatch>=0.3.0",
    "speedtest-cli>=2.1.3",
    "sqlalchemy==1.4.11",
    "ujson>=5.11.0",
]
